Fix main-wrap's margin-top  on desktop

--- a/src/css/modules-contact.css
+++ b/src/css/modules-contact.css
@@ -41,6 +41,14 @@
 	
 }
 
+@media (min-width: 50em) {
+	
+	.main-wrap {
+		margin-top: 12.5em;
+	}
+	
+}
+
 @media (max-width: 59.99em) {
 	
 	.contact-image {
